--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
             <artifactId>flatlaf</artifactId>
             <version>3.2</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.jfree/jfreechart -->
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.5.5</version>
+        </dependency>
     </dependencies>
 
     <!-- Build Configuration -->
